# petstore-test-project

./: README.md  example.py  pyproject.toml
config/: headers.py
services/pet/: endpoints.py
utils/: helper.py
